# aether

./: .cursorrules  .env  .env.example  .env.local  .env.production  .env.production.vercel  .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc  .prettierrc.js  .vercelignore  .zshrc  0001-feat-rag-implement-core-RAG-features-Add-document-pr.patch  API.md  BACKEND.md  CLAUDE_BOOTSTRAP.md  CONTEXT.md  CONTRIBUTING.md  CURRENT_STATE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.test  ESSENCE.md  FINAL_SPRINT.md  FRONTEND.md  INFRASTRUCTURE.md  LICENSE  MEMORY_TEST_FAILURE.md  PRINCIPLES.md  PROGRESS.md  PROJECT_ADVICE.md  PROJECT_IMPROVEMENT_PLAN.md  PROMPT.md  PROMPTS.md  RAG.md  RAG_CLAUDE_PROMPT.md  README.md  RECOVERY.md  RECOVERY_PLAN.md  (+69 more)
.backup/: PROMPTS.md  auth.test.jsx  chat.test.jsx  pyproject.toml  settings.json
.backup/api/aether_backend/: README.md  requirements.txt
.backup/api/aether_backend/app/: main.py
.backup/api/aether_backend/app/models/: document.py
.backup/api/rag_system/: main.py
.backup/vue-frontend/: App.vue
.backup/vue-frontend/components/: ChatMessageList.jsx  FlowComponent.jsx  README.md  index.js
.backup/vue-frontend/components/Chat/: BasicMessage.jsx  Chat.jsx  Message.jsx  SpaceTransition.jsx
.backup/vue-frontend/components/Flow/: index.jsx
.backup/vue-frontend/components/FlowModeSelector/: index.jsx
.backup/vue-frontend/components/Message/__tests__/: Message.test.jsx  MessageContent.test.jsx
.backup/vue-frontend/components/Spaces/: SpaceList.jsx
.backup/vue-frontend/components/__tests__/: AutonomicDevelopment.test.jsx  ErrorBoundary.test.jsx  PatternVisualization.test.jsx
.backup/vue-frontend/components/ui/__tests__/: Input.test.js  Message.test.js
aether/backend/: README.md  pyproject.toml
backend/: .flake8  .isort.cfg  CURRENT_STATE.md  Dockerfile  conftest.py  kaniko.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  task-definition.json  task-execution-role-policy.json  task-role-policy.json  test_embeddings.py  test_rag.py
backend/archive/tests/ai/: test_quality_system.py  test_query_expansion.py  test_rag_properties.py  test_vector_search.py  test_verification.py
backend/rag_aether/: __init__.py
backend/rag_aether/ai/: __init__.py  errors.py  persona_system.py  rag_system.py  vector_store.py
backend/rag_aether/api/: main.py
backend/rag_aether/core/: DevelopmentSled.js  backup.py  debug-protection.js  errors.py  performance.py  security.py
backend/rag_aether/core/__tests__/utils/: toBeInRange.test.js
backend/rag_aether/core/autonomic/: Autonomic.js
backend/rag_aether/core/context/: ContextPreservation.js  types.js
backend/rag_aether/core/energy/: useenergysystem.js
backend/rag_aether/core/energy/types/: patternmetrics.js
backend/rag_aether/core/flow/: constants.js
backend/rag_aether/core/flow/types/: validationstate.js
backend/rag_aether/core/hooks/: useStatePreservation.js  useSystemIntegration.js
backend/rag_aether/core/modules/flow/: types.js
backend/rag_aether/core/modules/protection/: index.js
backend/rag_aether/core/modules/space/: types.js
backend/rag_aether/core/protection/: TypeProtection.js
backend/rag_aether/core/reactions/: ReactionProvider.jsx
backend/rag_aether/core/scripts/: field.js  flowsession.js  usetypeguardian.js  workspace.js
backend/rag_aether/core/space/: adaptation.js
backend/rag_aether/core/system/: SystemIndex.js
backend/rag_aether/core/test/: TestHarness.js
backend/rag_aether/core/test/setup/: 1_51s8.js
backend/rag_aether/core/types/energy/: flow.js
backend/rag_aether/core/types/flow/: base.js
backend/rag_aether/core/types/patterns/: types.js
backend/rag_aether/core/types/primitives/: base.js
backend/rag_aether/core/types/space/: core9.js  space5.js
backend/rag_aether/core/types/test/: testing.js
backend/rag_aether/core/types/utils/: state.js
backend/rag_aether/services/chat/: api.js
backend/rag_aether/utils/: validation.jsx
backend/rag_aether/utils/__tests__/: errorBoundary.test.jsx
backend/src/: STATUS.md  health.js  main.py
backend/src/config/: __init__.py
backend/src/core/: DebugProtection.js  README.md  auth.py
backend/src/core/__tests__/hooks/: useStatePreservation.test.js
backend/src/core/autonomic/: AutonomicDevelopment.js  AutonomicValidation.js  useautonomic.js
backend/src/core/components/: FlowModeSelector.jsx
backend/src/core/config/shell/: vmOE.zsh
backend/src/core/energy/: constants.js  setupworkspace.js
backend/src/core/energy/types/: consciousnessmetrics.js  naturalflow.js
backend/src/core/essence/axioms/: presence.md
backend/src/core/experience/: FlowEngine.js
backend/src/core/flow/types/: g2Sl
backend/src/core/lib/: redis.js
backend/src/core/modules/autonomic/: index.js
backend/src/core/modules/consciousness/: types.js
backend/src/core/modules/energy/: types.js
backend/src/core/pattern/: PatternEngine.js
backend/src/core/pattern/tests/: pattern.test.js
backend/src/core/scripts/: 4vbU. Users  7kOc  JUvM  NXZn  PUJW  QgeB  RH5V  VGYt  YEFR  Z2Hg  energystate.js  flow.js  flowmetrics.js  order.js
backend/src/core/space/: MindSpaceSystem.js  SpaceContainer.jsx  Workshop.css
backend/src/core/spaces/: SpaceProvider.jsx  SpaceTypes.js
backend/src/core/types/: energy.js
backend/src/core/types/arsenal/: FlowTypeArsenal.js  TypeArsenal.js  TypeArsenal.test.js
backend/src/core/utils/: Grid.js  field.js
backend/src/models/: message.py
backend/src/routes/: messages.py
backend/src/services/: apiClient.js  messages.py
backend/src/utils/: errorBoundary.jsx  errors.js
backend/src/websocket/: __init__.py  manager.py  pool.py  rate_limiter.py  recovery.py  router.py  storage.py
backend/tests/: test_websocket.py
backend/tests/ai/: test_base_rag.py  test_hybrid_search.py  test_rag_persona.py  test_rag_properties.py  test_rag_system.py  test_test_data.py
backend/tests/future/: test_caching_system.py
backend/tests/rag_aether/: test_utils.py
docs/: API.md  (+38 more)
infrastructure-config/: github-actions-role-policy.json  pyproject.toml  setup_github_actions.py
(+5573 files in other folders)
