[tool.poetry]
name = "rag-aether"
version = "0.1.0"
description = "RAG system with efficient batch processing"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "rag_aether", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
psutil = "^6.1.1"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
websockets = "<14.0"
python-dotenv = "^1.0.1"
openai = "^1.59.8"
faiss-cpu = "^1.9.0.post1"
pgvector = "^0.3.6"
supabase = "^2.11.0"
boto3 = "^1.36.2"
redis = "^5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
