[tool.poetry]
name = "aether-backend"
version = "0.1.0"
description = "Aether Backend Service"
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "src"},
    {include = "src/websocket"},
    {include = "src/core"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
websockets = "^12.0"
pydantic = "^2.5.3"
pyjwt = "^2.10.1"
faiss-cpu = "^1.7.4"
numpy = "^1.26.3"
torch = "^2.1.2"
redis = "^5.0.1"
psutil = "^5.9.7"
python-dotenv = "^1.0.0"
openai = "^1.8.0"
supabase = "^2.3.1"
langchain = "^0.1.0"
langsmith = "^0.0.77"
boto3 = "^1.34.14"
requests = "^2.31.0"
memory-profiler = "^0.61.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
