[tool.poetry]
name = "bandcamp-dl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
mutagen = "^1.47.0"
demjson3 = "^3.0.6"
unicode-slugify = "^0.1.5"
bs4 = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 