[tool.poetry]
name = "rag-aether"
version = "0.1.0"
description = "RAG system for Aether"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
openai = "^1.12.0"
redis = "^5.0.1"
faiss-cpu = "^1.7.4"
numpy = "^1.26.0"
langchain = "^0.1.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
structlog = "^24.1.0"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --asyncio-mode=auto"
markers = [
    "asyncio: mark test as async/await test",
    "unit: mark test as unit test"
] 