[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rag-aether"
version = "0.1.0"
description = "RAG system for Aether"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "rag_aether", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.38.2"
torch = "^2.2.1"
numpy = "^1.24.0"
faiss-cpu = "^1.8.0"
fastapi = "^0.110.0"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
rank-bm25 = "^0.2.2"
sentence-transformers = "^2.5.1"
sentencepiece = "^0.2.0"
uvicorn = "^0.27.1"
aiohttp = "^3.9.3"
psutil = "^6.1.1"
httpx = "^0.27.0"
nltk = "^3.8.1"
langchain = "^0.1.12"
protobuf = "^4.25.3"
supabase = "^2.11.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
pytest-asyncio = "^0.25.2"
hypothesis = "^6.98.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=src --cov-report=html --asyncio-mode=auto"
markers = [
    "asyncio: mark test as async/await test",
    "slow: mark test as slow running",
    "integration: mark test as integration test",
    "unit: mark test as unit test"
] 